Fix padding and overflow of reports displays

--- a/app/components/live-report/live-report.css
+++ b/app/components/live-report/live-report.css
@@ -1,3 +1,5 @@
-div.CodeMirror.live-report {
+div.CodeMirror.live-report pre {
     overflow: visible;
+    width: 100%;
+    word-wrap: break-word;
 }
